--- a/day2/day2.html
+++ b/day2/day2.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="./day2.css">
 </head>
 <body>
+    <header>
+        <div class="box">
+            <p>Home</p>
+            <p>Life</p>
+            <p>Culture</p>
+            <p>What's new</p>
+            <p>Join us</p>
+            <p>Contact Us</p>
+        </div>
+    </header>
     <main>
         <div class="box1">
             <div class="container">
                 <h2>10 Things to do before you die</h2>
                 <p>Dec 22, 2018</p>
             </div>
-            <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
+            <img src="https://s3-alpha-sig.figma.com/img/4c60/e789/bc66bb63f5f6efaa509949b45489e12d?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=e6WBUzJcjUMVvJ9~vXVFgmwdQXXP0p6qjx2nFXZ68PpeNupiW7RtFFQtEbihAxXXGwiPAinCa~-523ofkZqBZICrs2qL9S7Wff~u2l2WsZyu7PZFBOYdydcH~lrK~U3NuThha~aIQD60eETnXi0lYbHY6iwTsmdU6USB4AtY2Bz06RnF0Rt5nroxH-0n20oUBl8idW-PIcR7LqIIsHqiEMJqEa7oTCMjT3oTPs0qQinFGCp4726GfE~-FuYRT7B-ih7pbVm5q7hFekLRgeh9ZDVgo-krL0GaVHh-TsgelxJZ6RCl3C2mK~gi920MZXhfBYyuyawI70~XHphy8iLcbA__" alt="">
 
         </div>
         <div class="box2">
@@ -25,19 +35,19 @@
             <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
         </div>
         <div class="box">
-            <p>this is about</p>
-            <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
+            <h3>this is about</h3>
+            <img src="https://s3-alpha-sig.figma.com/img/06c0/ab53/8f70dd3dd983998ddb0d8b9d8c98b9b3?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=qqFq44EsAkfuGF~XYQIvI5B0X70wyEViNm4iYTB-FkqjHmHynMt8jMKZGW3Mwhgq6cy-sYi3Q~lyPkxVJRiH1Wqklz~zupZMpxaCxzcQmnISiJYQBQLHkkeJrH3d9z8u3pbNkZES872Q0l4P8Qm9C-CQ6dwns3mYpytitfLPH95DHD1fDE1qH0X7DQJdZV~C87wgDZh8GHN18JMIJUlR6CWCK2fpfTWYOajQehCme5~Yjgi8VpFCGx6oO0vnn0WBcTih2rK4revHoIEaWibLv549P46WNpGkF2fzuZfIVag2KpdU9YWqX2yVG1HJbIDCAKAKn-~42mt7eG8X2G1a2g__" alt="">
         </div>
         <div class="box">
-            <p>You were right</p>
-            <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
+            <h3>You were right</h3>
+            <img src="https://s3-alpha-sig.figma.com/img/abbc/0bcb/7d9761678585a83af852ea39e9890aab?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=fsauGMKq-dkTX6emYWhUBEkm70a5WNVgga3GHkkrZHJFY1wg19A8Q5SzpqTzPAc0X1c6D8ohM5Kt9-xoBgEkgjnkTOndxjlk8Kpl5mVUhNdsW64Pl4IH-EluWiPBUuc7lTocnLvV9z4iaXCi3PKqBpahX1Huy5lE0bLdTUzV8Qu7esqUK3in28MkWOHWHYURp1sYelKjsXPYuJahIcY-Zwb55ZzPlxOh1qdLU7nQPA2g7PiRfIz6iNR3GTSRez84GQcE~G3zoJ3~ZJQ1AdFgSQExN~W6aqobDpbR9pCtyabsEFOHMrTedTZnqTBc~~i0OxYq7WlK2fzogAHJedpcZg__" alt="">
         </div>
         <div class="box">
-            <p>Here we are</p>
-            <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
+            <h3>Here we are</h3>
+            <img src="https://s3-alpha-sig.figma.com/img/4b37/66d5/7fb8788751dc88b9cade0eb5e095b9d4?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JdLjpUstCn1TRZJ3IsvDnviRCYiOvkuQHWbf4hT3Ln1dYW7Azgo-5Fb5VvZDoT1vznHz867Tlm8xjJtwCSm-8lpaqxdZaIEfH4xSQMHYdwS7OSHTG2JGotxW3Vqnn0hdkJHO-ha6ZGVOzfIFC2-NVy18olqcNnqM4XEBtJ4j4FuqPK490NU5IjQLej2z5-xA1nVJbeXhEKDJJ2fz72If8qFYF~qjGiHMGbj1wbC-kgUbzfI8j-IVtChuXHhJ664N0KOdMupVnSM4PuWS7wTn6UW8tRLqhzkp3vPtxbKSQA0kuRuFj-yhbXhjy3l3VZCAURpWxNWrfhi19rVMEk-CAg__" alt="">
         </div>
         <div class="box">
-            <p>Before i go</p>
+            <h3>Before i go</h3>
             <img src="https://s3-alpha-sig.figma.com/img/b758/d7d9/806c6f3c315a9aa8d724e8e4942174ed?Expires=1733097600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MO41B14T9yD~hrrJ6ziy4kj5tOToTsmb-YXcnjxj3I2spLrfG7ir5V2~ahQzVmuQC~GkMZMH7vgzzZYYtpt0cFk7eYi5PSJ~EGvM~vNU7IqNvhLFnKeMavVrdXrGO7PiXsbwNs0if3HniuxJ-FHsAxd5QiVJjlQYICA7KvzaT0X3QyXHZRgFgFYbRjPZ763Fio1AkSY9Ws3nzMvEaICzcM6gT1WPrxiS0KxDGYr8Bg8V7CjTiUdQzKI3bCI2-wjHOghEp1ciPgfqPFdVTEnBqsnrLbQlKtcX39vkJ~-~mKTrl4WSCZ5KS-tHiQ29dQ2TINSKwIXyF9TTTAdU3LZ95g__" alt="">
         </div>
     </main>
